# Ficflow

./: .gitignore  Cargo.toml  README.md  build.rs  fanfictions.db
.github/workflows/: aur-publish.yml  release.yml  test.yml
aur/: PKGBUILD  README.md  ficflow.desktop
src/: error.rs  lib.rs  main.rs  version.rs
src/application/: add_fic.rs  add_to_shelf.rs  check_updates.rs  count_fics_in_shelf.rs  count_fics_per_shelf.rs  create_auto_shelf.rs  create_shelf.rs  delete_fic.rs  delete_shelf.rs  get_fic.rs  list_fics.rs  list_shelf_fics.rs  list_shelves.rs  list_shelves_for_fic.rs  mod.rs  move_shelf.rs  pin_shelf.rs  remove_from_shelf.rs  rename_shelf.rs  unpin_shelf.rs  update_auto_shelf_criteria.rs  update_chapters.rs  update_note.rs  update_rating.rs  update_read_count.rs  update_status.rs  upsert_auto_shelf.rs  wipe_db.rs
src/domain/: config.rs  db.rs  fic.rs  mod.rs  repository.rs
src/domain/fanfiction/: entity.rs  mod.rs  rating.rs  repository.rs  status.rs
src/domain/shelf/: auto_criteria.rs  entity.rs  mod.rs  repository.rs
src/domain/url_config/: ao3_config.rs  mod.rs
src/infrastructure/: db.rs  migration.rs  mod.rs
src/infrastructure/ao3/: fetch_fic.rs  mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/db/: connection.rs  mapping.rs  migration.rs  mod.rs  operations.rs  repository.rs
src/infrastructure/persistence/: mod.rs
src/infrastructure/persistence/database/: connection.rs  migration.rs  mod.rs  sqlite_connection.rs
src/infrastructure/persistence/repository/: fanfiction_repository.rs  mapping.rs  mod.rs  operations.rs  sqlite_repository.rs
src/interfaces/: cli.rs  interface.rs  mod.rs
src/interfaces/cli/: command.rs  executor.rs  executor.rs.broken  mod.rs
src/interfaces/cli/views/: details_view.rs  mod.rs  (+2 more)
src/interfaces/gui/: app.rs  assets.rs  auto_shelf.rs  chrome.rs  config.rs  fonts.rs  format.rs  library_cache.rs  mod.rs  selection.rs  selection_controller.rs  theme.rs  view.rs
src/interfaces/utils/: mod.rs  url_parser.rs
tests/: add_fic_test.rs  ao3_test.rs  application.rs  cli_test.rs  cli_tests.rs  db_test.rs  e2e.rs  e2e_test.rs  gui.rs  infrastructure.rs  retrying_fetcher_test.rs  update_chapters_test.rs  update_note_test.rs  update_rating_test.rs  update_read_count_test.rs  update_status_test.rs  url_parser_test.rs
tests/application/: add_fic.rs  update_chapters.rs  update_note.rs  update_rating.rs  update_read_count.rs  update_status.rs
tests/common/: mod.rs
tests/fixtures/: ao3_fic_anonymous.html  ao3_fic_example1.html  ao3_fic_outdated.html  ao3_fic_up_to_date.html
tests/gui/: auto_shelves.rs  bulk.rs  columns.rs  field_updates.rs  harness.rs  last_view.rs  library.rs  quit_confirm.rs  shelf_delete_key.rs  shelves.rs  smoke.rs  soft_delete.rs  theme.rs  view_state.rs
tests/infrastructure/: ao3.rs  ao3_real.rs  db.rs  library_location.rs  retrying_fetcher.rs  shelf.rs  url_parser.rs
(+25 files in other folders)
