[package]
name = "ficflow"
version = "0.1.0"
edition = "2021"

[lib]
name = "ficflow"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
strum = "0.27.1"
strum_macros = "0.27.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18"
httpmock = "0.7.0"
assert_cmd = "2.0.17"
predicates = "3.1.3"
dirs-next = "2.0.0"
term-table = "1.3.2"
once_cell = "1.19.0"
tempfile = "3.10.0"
regex = "1.11.1"
# Update term-table to the latest version that supports the builder pattern
# term-table = "1.3.2"
