[package]
name = "ficflow"
version = "0.1.0"
edition = "2021"

[lib]
name = "ficflow"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.39.0", features = ["bundled", "fallible_uint"] }
rusqlite_migration = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
strum = "0.28.0"
strum_macros = "0.28.0"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "gzip", "rustls"] }
scraper = "0.26.0"
dirs-next = "2.0.0"
term-table = "1.4.0"
once_cell = "1.21.4"
regex = "1.12.3"
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.18"

eframe = { version = "=0.29", default-features = false, features = ["wgpu", "wayland", "x11", "persistence"] }
egui = "=0.29"
egui_extras = "=0.29"
egui-notify = "=0.17"
toml = "=0.8"

[dev-dependencies]
httpmock = "0.8.3"
assert_cmd = "2.2.1"
predicates = "3.1.4"
tempfile = "3.27.0"
